# story-forge

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite-debug-plugin.ts  vite.config.ts  打包必看.md  打包必读.md
.github/workflows/: release.yml
src/: App.tsx  api.ts  debugLog.ts  main.tsx  projectStore.ts  storage.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BulkExportModal.tsx  CharacterPanel.tsx  ChatPanel.tsx  CreateProjectModal.tsx  ExportModal.tsx  ForeshadowingPanel.tsx  GlobalSettings.tsx  InlineRevision.tsx  NodeEditor.tsx  NodeGraph.tsx  NodeTrashPanel.tsx  ProjectsPage.tsx  StateCard.tsx  StoryNode.tsx  StoryPanel.tsx  Toolbar.tsx  WritingGuideModal.tsx  WritingRulesPanel.tsx
src/styles/: index.css
交接文档/: 20260422001-流式重构与URL修复.md  20260422002-双重伏笔系统与生产清理.md  20260426001-伏笔去重与安全调试原则.md
