[package]
name = "narrative-forge"
version = "1.0.0"
description = "叙事工坊 — AI Short Story Generator"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "narrative_forge_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
